--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0  
+        fetch-depth: 0
+        submodules: true  
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
